@startuml UpdateCommandArchitectureDiagram
package "seedu.command" {
    class UpdateCommand {
    +execute(args: String[])
    -handleUpdateField(fieldData: String)
    -handleUpdateRecord(enteredString: String)

    }
}

package "seedu.model" {
    class Inventory
}

package "seedu.storage" {
    class Csv
}

package "seedu.ui" {
    class Ui
}

UpdateCommand --> Inventory : modifies
UpdateCommand --> Csv : updates
UpdateCommand --> Ui : displays
@enduml